--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "yt_viewfinder"
-version = "2024.1.0"
+version = "2024.1.1"
 description = "A Python package that fetches YouTube video view counts by video titles and optional artists using async http requests."
 authors = [
   { name = "Jaydin", email = "JaydinFreemanWork@gmail.com" }
@@ -14,3 +14,4 @@ dependencies = [
   "aiohttp"
 ]
 requires-python = ">=3.8"
+readme = "README.md"
